Changes from TomJ

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="hr">&nbsp;</div>
 			</div><!-- /row -->
 			<div class="row subtitle-row">
-				<div class="col-12 font-thin">The <span class="font-semibold"><a href="" onclick='window.open("https://emotive.lboro.ac.uk");return false;'>EMOTIVE(tm)</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
+				<div class="col-12 font-thin">The <span class="font-semibold"><a href="" onclick='window.open("http://emotive.systems");return false;'>EMOTIVE</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
 			</div><!-- /row -->
 			<div class="row content-row">
 				<div class="col-12 col-lg-4 col-sm-4">
@@ -136,23 +136,16 @@
 			
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/02.png"><img class="thumb" src="images/screenshots/02-small.png" alt=""></a></div>
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/04.png"><img class="thumb" src="images/screenshots/04-small.png" alt=""></a></div>
-			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/09.png"><img class="thumb" src="images/screenshots/09-small.png" alt=""></a></div>
+			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/07.png"><img class="thumb" src="images/screenshots/07-small.png" alt=""></a></div>
 		</div><!-- /row -->
-<div class="subtitle-row">
-					<div class="">&nbsp;</div>
-				</div><!-- /row -->
-			<div class="title-row">
+			<div class="title-row"><br/><br/>
 			<div class="col-12 font-thin">... and the key <span class="font-semibold">Policies</span> and <span class="font-semibold">Candidates</span> from each party are included in the <span class="font-semibold">Full edition.</span></div>
 			</div><!-- /row -->
-		
-<div class="subtitle-row">
-					<div class="">&nbsp;</div>
-				</div><!-- /row -->
-
+			<br/><br/>
 			<div class="">	
 				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/06.png"><img class="thumb" src="images/screenshots/06-small.png" alt=""></a></div>
-				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/07.png"><img class="thumb" src="images/screenshots/07-small.png" alt=""></a></div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/03.png"><img class="thumb" src="images/screenshots/03-small.png" alt=""></a></div>
 				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/08.png"><img class="thumb" src="images/screenshots/08-small.png" alt=""></a></div>
 				<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/05.png"><img class="thumb" src="images/screenshots/05-small.png" alt=""></a></div>			
 			</div>
@@ -255,7 +248,7 @@
 			
 			<div class="col-12">&nbsp;</div>
 				<br/>
-				<h4 class="font-thin">VoteBee uses the <a target="_blank" href="" onclick='window.open("http://emotive.lboro.ac.uk");return false;'>EMOTIVE</a> Engine developed from Professor Tom Jackson and Dr Martin Sykora’s research at <a href="" onclick='window.open("http://lboro.ac.uk");return false;'>Loughborough University</a>. EMOTIVE analyses twitter traffic to extract the emotional content using its own proprietary technology (a complex natural language processing ontology). The "VoteBee" mobile apps and digital infrastructure are developed and maintained by <a href="" onclick='window.open("http://www.encircle.co.uk");return false;'>enCircle Solutions Ltd.</a></h4>
+				<h4 class="font-thin">VoteBee uses the <a target="_blank" href="" onclick='window.open("http://emotive.systems");return false;'>EMOTIVE</a> Engine developed from Professor Tom Jackson and Dr Martin Sykora’s research at <a href="" onclick='window.open("http://lboro.ac.uk");return false;'>Loughborough University</a>. EMOTIVE analyses twitter traffic to extract the emotional content using its own proprietary technology (a complex natural language processing ontology). The "VoteBee" mobile apps and digital infrastructure are developed and maintained by <a href="" onclick='window.open("http://www.encircle.co.uk");return false;'>enCircle Solutions Ltd.</a></h4>
 			</div>
 			<div id="contact-row-4" class="row">
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
