--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			<div class="col-12 col-lg-6 col-md-6 col-sm-6 col-xs-12"><a data-fancybox-group="portfolio" class="fancybox" href="images/screenshots/07.png"><img class="thumb" src="images/screenshots/07-small.png" alt=""></a></div>
 		</div><!-- /row -->
 			<div class="title-row"><br/><br/>
-			<div class="col-12 font-thin">... and the key <span class="font-semibold">Policies</span> and <span class="font-semibold">Candidates</span> from each party are included in the <span class="font-semibold">Full edition.</span></div>
+			<div class="col-12 font-thin">... and the key <span class="font-semibold">Policies</span> and <span class="font-semibold">Extra Graphs</span> are included in the <span class="font-semibold">Full edition.</span></div>
 			</div><!-- /row -->
 			<br/><br/>
 			<div class="">	
