Collapsed sharing links on mobile
plus GA events

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<div class="hr">&nbsp;</div>
 			</div><!-- /row -->
 			<div class="row subtitle-row">
-				<div class="col-12 font-thin">The <span class="font-semibold"><a href="" onclick='window.open("http://emotive.systems");return false;'>EMOTIVE</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
+				<div class="col-12 font-thin">The <span class="font-semibold"><a href="#emotive.systems" onclick='window.open("http://emotive.systems");return false;'>EMOTIVE</a></span> engine then extracts the <span class="font-semibold">emotional views</span> expressed in people's tweets and VoteBee <span class="font-semibold">shows you the honey</span>.</div>
 			</div><!-- /row -->
 			<div class="row content-row">
 				<div class="col-12 col-lg-4 col-sm-4">
@@ -184,7 +184,7 @@
 					<div class="col-6">
 						<h2 class="font-thin">Or try the <b>Free</b> version with <b>Parties</b>,<b> Leaders</b> and <b>Partners</b>:-</h2>
 						<a href="https://play.google.com/store/apps/details?id=uk.ac.lboro.votebee">
-						  <img height="100px;" alt="Get the Full version on Google Play"
+						  <img height="100px;" alt="Get the Free version on Google Play"
 						       src="images/playstoredownload.png" onclick='window.open("https://play.google.com/store/apps/details?id=uk.ac.lboro.votebee");return false;'/> 
 						</a>
 						<div class="subtitle-row with-hover-text"><b>iOS</b> version coming soon....<span class="hover-text font-light"><p>Send us your email using the feedback form below to receive updates.</p></span></div>
