Pinterest and LinkedIn share links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
 
 <body>
 <ul class="social">
-  <li><a target="_blank" href="https://twitter.com/share?url=http://votebee.social" class="tw" alt="Tweet this page!"><i class="icon-twitter"></i></a></li>
+  <li><a target="_blank" href="https://twitter.com/home?status=%23VoteBee%20collects%20the%20emotions%20of%20the%20electorate%20and%20shows%20how%20people%20feel%20about%20politicians,%20leaders,%20partners%20and%20policies." class="tw" alt="Tweet this page!"><i class="icon-twitter"></i></a></li>
 	<li><a target="_blank" href="http://www.facebook.com/sharer.php?u=http://votebee.social&amp;t=VoteBee" class="fb" alt="Share this page!"><i class="icon-facebook"></i></a></li>
 	<li><a target="_blank" href="http://plus.google.com/share?url=http://votebee.social" class="gp" alt="Share this page!"><i class="icon-google-plus"></i></a></li>
+	<li><a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http://votebee.social&title=VoteBee%20Political%20Emotion%20Tracker&summary=%23VoteBee%20collects%20the%20emotions%20of%20the%20electorate%20and%20shows%20how%20people%20feel%20about%20politicians,%20leaders,%20partners%20and%20policies.&source=" class="li" alt="Share this page!"><i class="icon-linkedin"></i></a></li>
+	<li><a target="_blank" href="https://pinterest.com/pin/create/button/?url=https://votebee.social&media=https://votebee.social/images/screenshots/06.png&description=%23VoteBee%20collects%20the%20emotions%20of%20the%20electorate%20and%20shows%20how%20people%20feel%20about%20politicians,%20leaders,%20partners%20and%20policies." class="pt" alt="Share this page!"><i class="icon-pinterest"></i></a></li>
+	
+
 </ul>
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
 		<div class="container">
