--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 				</div>
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
 				<h3>Press Enquiries</h3>
-					<p><a href="mailto:press@lboro.ac.uk"><i class="icon icon-envelope"></i></a></p>
-					<span class="hover-text font-light ">press@lboro.ac.uk</span></a>
-				</div>
+					<p><a href="mailto:publicrelations@lboro.ac.uk"><i class="icon icon-envelope"></i></a></p>
+					<span class="hover-text font-light ">publicrelations@lboro.ac.uk</span></a>
+				</div> 
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
 					<h3>Facebook</h3>
 					<p><a target="_blank" href="https://www.facebook.com/lborouniversity"><i class="icon icon-facebook"></i></a></p>
