Added App store downloads

--- a/index.html
+++ b/index.html
@@ -178,12 +178,11 @@
 						  <img height="100px;" alt="Get the Full version on Google Play"
 						       src="images/playstoredownload.png" onclick='window.open("https://play.google.com/store/apps/details?id=uk.ac.lboro.votebeepaid");return false;'/>
 						</a>
-						<div class="subtitle-row with-hover-text"><b>iOS</b> version coming soon....<span class="hover-text font-light"><p>Send us your email using the feedback form below to receive updates.</p></span></div>
-						<!--div class="">&nbsp;</div>
-						<a href="https://apple.com">
-						  <img height="100px;" alt="Get the Full version on the App Store"
-						       src="images/appstoredownload.png" onclick='window.open("https://apple.com");return false;'/>
-						</a-->
+						
+						<a href="https://itunes.apple.com/us/app/votebee-paid-edition/id974662630?ls=1&mt=8">
+						  <img height="100px;" alt="Get the Full version on the Apple App Store"
+						       src="images/appstoredownload.png" onclick='window.open("https://itunes.apple.com/us/app/votebee-paid-edition/id974662630?ls=1&mt=8");return false;'/> 
+						</a>
 					</div>
 					<div class="col-6">
 						<h2 class="font-thin">Or try the <b>Free</b> version with <b>Parties</b>,<b> Leaders</b> and <b>Partners</b>:-</h2>
@@ -191,12 +190,11 @@
 						  <img height="100px;" alt="Get the Free version on Google Play"
 						       src="images/playstoredownload.png" onclick='window.open("https://play.google.com/store/apps/details?id=uk.ac.lboro.votebee");return false;'/> 
 						</a>
-						<div class="subtitle-row with-hover-text"><b>iOS</b> version coming soon....<span class="hover-text font-light"><p>Send us your email using the feedback form below to receive updates.</p></span></div>
-						<!--div class="">&nbsp;</div>
-						<a href="https://apple.com">
-						  <img height="100px;" alt="Get the Full version on the App Store"
-						       src="images/appstoredownload.png" onclick='window.open("https://apple.com");return false;'/>
-						</a-->
+						
+						<a href="https://itunes.apple.com/us/app/votebee-free/id974661271?ls=1&mt=8">
+						  <img height="100px;" alt="Get the Free version on the Apple App Store"
+						       src="images/appstoredownload.png" onclick='window.open("https://itunes.apple.com/us/app/votebee-free/id974661271?ls=1&mt=8");return false;'/> 
+						</a>
 					</div>
 				</div>
 		</div>
