--- a/index.html
+++ b/index.html
@@ -261,23 +261,23 @@
 			<div id="contact-row-4" class="row">
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
 					<h3>On The Phone</h3>
-					<p><a target="_blank" href="tel:00441509222222"><i class="icon icon-phone"></i></a></p>
-					<span class="hover-text font-light ">+44 (0) 1509 222 222</span></a>
+					<p><a target="_blank" href="tel:00441509808033"><i class="icon icon-phone"></i></a></p>
+					<span class="hover-text font-light ">+44 (0) 1509 808033</span></a>
 				</div>
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
 				<h3>Press Enquiries</h3>
-					<p><a href="mailto:publicrelations@lboro.ac.uk"><i class="icon icon-envelope"></i></a></p>
-					<span class="hover-text font-light ">publicrelations@lboro.ac.uk</span></a>
+					<p><a href="mailto:press@votebee.social"><i class="icon icon-envelope"></i></a></p>
+					<span class="hover-text font-light ">press@votebee.social</span></a>
 				</div> 
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
 					<h3>Facebook</h3>
-					<p><a target="_blank" href="https://www.facebook.com/lborouniversity"><i class="icon icon-facebook"></i></a></p>
-					<span class="hover-text font-light ">facebook/lborouniversity</span></a>
-				</div>
+					<p><a target="_blank" href="https://www.facebook.com/votebeeapp"><i class="icon icon-facebook"></i></a></p>
+					<span class="hover-text font-light ">facebook/votebeeapp</span></a>
+				</div> 
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
 					<h3>Twitter</h3>
-					<p><a target="_blank" href="https://twitter.com/lborouniversity"><i class="icon icon-twitter"></i></a></p>
-					<span class="hover-text font-light ">@lborouniversity</span></a>
+					<p><a target="_blank" href="https://twitter.com/votebeeapp"><i class="icon icon-twitter"></i></a></p>
+					<span class="hover-text font-light ">@votebeeapp</span></a>
 				</div>
 			</div>
 		</div><!-- /container -->
