--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			
 			<div class="col-12">&nbsp;</div>
 				<br/>
-				<h4 class="font-thin">VoteBee uses the <a target="_blank" href="#emotive.systems" onclick='window.open("http://emotive.systems");return false;'>EMOTIVE</a> Engine developed from Professor Tom Jackson and Dr Martin Sykora’s research at <a href="#lboro.ac.uk" onclick='window.open("http://lboro.ac.uk");return false;'>Loughborough University</a>. EMOTIVE analyses twitter traffic to extract the emotional content using its own proprietary technology (a complex natural language processing ontology). The "VoteBee" mobile apps and digital infrastructure are developed and maintained by <a href="#encircle.co.uk" onclick='window.open("http://www.encircle.co.uk");return false;'>enCircle Solutions Ltd.</a></h4>
+				<h4 class="font-thin">VoteBee uses the <a target="_blank" href="#emotive.systems" onclick='window.open("http://emotive.systems");return false;'>EMOTIVE</a> Engine developed from Professor Tom Jackson and Dr Martin Sykora’s research. EMOTIVE analyses twitter traffic to extract the emotional content using its own proprietary technology (a complex natural language processing ontology). The "VoteBee" mobile apps and digital infrastructure are developed and maintained by <a href="#encircle.co.uk" onclick='window.open("http://www.encircle.co.uk");return false;'>enCircle Solutions Ltd.</a></h4>
 			</div>
 			<div id="contact-row-4" class="row">
 				<div class="col-12  col-lg-3 col-sm-2 with-hover-text">
