Sorting out IE8

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 	<meta name="description" content="VoteBee uses the EMOTIVE Engine developed from Professor Tom Jackson and Dr Martin Sykora’s research at Loughborough University. EMOTIVE analyses twitter traffic to extract the emotional content using its own proprietary technology (a complex natural language processing ontology). The VoteBee mobile apps and digital infrastructure are developed and maintained by enCircle Solutions Ltd." />	    
 	<meta name="keywords" content="votebee, voter, uk, general, election, 2015, emotion, tracker, politics, social">
 	
-
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
-	
-	<link rel="stylesheet" type="text/css" href="css/style.css">	
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!--[if IE 8]>
+	<link href="css/ie8-style.css" rel="stylesheet" type="text/css" />
+	<![endif]--> 
+
 	<link rel="stylesheet" href="css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
 	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	
